# PTOTestingFramework

./: README.md  pyproject.toml
src/pto_test/: __init__.py
src/pto_test/codegen/: __init__.py  orch_generator.py  program_generator.py
src/pto_test/core/: __init__.py  test_case.py  test_runner.py  validators.py
src/pto_test/tools/: standalone_runner.py
src/pto_test/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/test_cases/: __init__.py  test_broadcast.py  test_elementwise.py  test_matmul.py  test_memory.py  test_paged_attention.py  test_reduction.py  test_scalar_ops.py  test_unary.py
