[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pto-test"
version = "0.1.0"
description = "End-to-end testing framework for PyPTO frontend and Simpler runtime"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "PyPTO Team"}
]
dependencies = [
    "numpy>=1.20.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-xdist",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
